# spacegt-app

./: .env.development  .env.production  components.d.ts  env.d.ts  index.html  latest.json  package.json  pnpm-lock.yaml  typed-router.d.ts  vite.config.mts  vite.config.mts.timestamp-1740991051684-c126221a3a3ab.mjs
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/accounts/: orgs.ts  roles.ts  users.ts
src/axios/: accounts-service.ts
src/components/: CheckingForUpdates.vue  HelloWorld.vue  Logo.vue  SearchFields.vue  SearchPalettes.vue  ShoppingCarts.vue  Snackbar.vue  ThemeSwitch.vue
src/components/accounts/: BatchUsers.vue  OrgsBtn.vue
src/components/accounts/selection/: SelectionOrgs.vue
src/components/model/: ModelRender.vue  UgglyBunny.vue
src/components/search/: SearchFields.vue
src/components/window/: AccountBtn.vue  AppBar.vue  SystemBar.vue
src/layouts/: default.vue
src/pages/: 404.vue  index.vue  login.vue  model-framework.vue  splashscreen.vue
src/pages/index/: about.vue  contact.vue  demo.vue  home.vue  index.vue  pricing.vue  settings.vue
src/pages/index/accounts/: orgs.vue  roles.vue  users.[[rids]].vue  users.vue
src/plugins/: index.ts
src/router/: index.ts
src/stores/: authentication.ts  authorization.ts  navigation.ts  snackbar.ts  theme.ts
src/stores/data/: accounts.ts
src/utils/: paging-processor.ts  screen.ts
~/.tauri/: myapp.key  myapp.key.pub
(+11 files in other folders)
